--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pelicanjs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Pelican is a collection of string & array functions for NodeJs",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/timothyverhaeghe/pelican/issues"
   },
-  "homepage": "https://github.com/timothyverhaeghe/pelican#readme"
+  "homepage": "https://github.com/timothyverhaeghe/pelican#readme",
+  "dependencies": {
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-plugin-import": "^2.7.0"
+  }
 }
